--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -90,6 +90,9 @@ message.form.thickness.label = Thickness
 message.form.thickness.placeholder = Enter thickness
 message.form.symbol.label = Symbol
 message.form.symbol.placeholder = Enter symbol
+message.form.productType.label = Product type
+message.form.button.addFile = Add file
+message.form.button.edit = Edit
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -124,6 +127,7 @@ message.catalog.mirror.description = Mirrors are multifunctional interior elemen
 message.catalog.partition.description = Glass partitions are not only a way of zoning a space, but also a decorative element. They can visually expand the room and increase the luminous flux. You can place an order by phone or via an online form. 
 message.catalog.shower.description = Glass shower enclosures perfectly solve issues related to the quality, convenience, functionality of the bathroom. They allow you to eliminate crowding, monotony, and implement the most interesting design ideas in the interior of the room. You can place an order by phone or via the online form.
 message.catalog.apron.description = The appearance of skinale allowed us to reconsider approaches to the design of the kitchen interior. A glass apron for the kitchen has not just become a popular interior solution. You can place an order by phone or via the online form.
+message.catalog.settings.heading = Template
 #Enums
 #ProdctType
 message.enum.productType.glass.plural = Glass
