--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -90,6 +90,10 @@ message.form.thickness.label = Толщина
 message.form.thickness.placeholder = Введите толщину
 message.form.symbol.label = Краткое обозначение
 message.form.symbol.placeholder = Введите краткое обозначение
+message.form.productType.label = Изделие
+message.form.button.addFile = Добавить файл
+message.form.button.edit = Редактировать
+
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
 #Validation
@@ -124,12 +128,13 @@ message.catalog.mirror.description=Зеркала – многофункцион
 message.catalog.partition.description=Стеклянные перегородки – это не только способ зонирования пространства, но и элемент декора. Они могут визуально расширить помещение и увеличить световой поток. Сделать заказ можно по телефону или посредством онлайн-формы.
 message.catalog.shower.description=Душевые кабины из стекла прекрасно решают вопросы, связанные с качеством, удобством, функциональностью ванной комнаты. Они позволяют устранить тесноту, однообразие, реализовать самые интересные дизайнерские задумки в интерьере комнаты. Сделать заказ можно по телефону или посредством онлайн-формы.
 message.catalog.apron.description=Появление скинали позволило пересмотреть подходы к оформлению кухонного интерьера. Фартук для кухни из стекла не просто стал популярным интерьерным решением. Сделать заказ можно по телефону или посредством онлайн-формы.
+message.catalog.settings.heading = Шаблон
 #Enums
 message.enum.productType.glass.plural=Стекло
 message.enum.productType.glass=Стекло
 message.enum.productType.mirror.plural=Зеркала
 message.enum.productType.mirror=Зеркало
-message.enum.productType.partition.plural=Переородки
+message.enum.productType.partition.plural=Перегородки
 message.enum.productType.partition=Перегородка
 message.enum.productType.shower.plural=Душевые
 message.enum.productType.shower=Душевая
