--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -93,6 +93,11 @@ message.form.symbol.placeholder = Enter symbol
 message.form.productType.label = Product type
 message.form.button.addFile = Add file
 message.form.button.edit = Edit
+message.form.increasePercent.label = Increase per cent
+message.form.increasePercent.placeholder = Enter increase per cent
+message.form.currency.placeholder = Enter currency
+message.form.button.updatePrices = Update prices
+
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -207,3 +212,4 @@ message.component.column.type = Type
 message.component.column.name = Name
 message.component.column.thickness = Thickness
 message.component.column.symbol = Symbol
+message.component.column.price = Price
