--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -93,7 +93,10 @@ message.form.symbol.placeholder = Введите краткое обозначе
 message.form.productType.label = Изделие
 message.form.button.addFile = Добавить файл
 message.form.button.edit = Редактировать
-
+message.form.increasePercent.label = Процент надбавки
+message.form.increasePercent.placeholder = Введите процент надбавки
+message.form.currency.placeholder = Введите курс валюты
+message.form.button.updatePrices = Обновить цены
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
 #Validation
@@ -206,3 +209,4 @@ message.component.column.type = Тип
 message.component.column.name = Наименование
 message.component.column.thickness = Толщина
 message.component.column.symbol = Краткое обозначение
+message.component.column.price = Цена
