OrderController except save method

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -119,6 +119,9 @@ message.accessDenied.code.text = HTTP 403 Forbidden
 message.accessDenied.description.label = ERROR DESCRIPTION
 message.accessDenied.description.text = Access Denied. You Do Not Have The Permission To Access This Page On This Server
 message.accessDenied.footer = HAVE A NICE DAY
+#Not found
+message.notFound.code.text = HTTP 404 NotFound
+message.notFound.description.text = Object is not found.
 #Contacts
 message.contacts.heading = Our contacts
 message.contacts.workingHours = Working hours: 10:00-17:00
@@ -149,6 +152,7 @@ message.enum.productType.apron = Kitchen apron
 message.enum.orderStatus.active = Active
 message.enum.orderStatus.paid = Paid
 message.enum.orderStatus.closed = Closed
+message.enum.orderStatus.cart = Cart
 #Component
 message.enum.componentType.glassType.plural = Glass types
 message.enum.componentType.glassType = Glass type
