--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -118,6 +118,9 @@ message.accessDenied.code.text=HTTP 403 Доступ запрещен
 message.accessDenied.description.label=ОПИСАНИЕ ОШИБКИ
 message.accessDenied.description.text=Доступ Запрещен. Доступ К Данной Странице На Сервере Запрещен.
 message.accessDenied.footer=ХОРОШЕГО ДНЯ
+#Not found
+message.notFound.code.text = HTTP 404 Не найдено
+message.notFound.description.text = Объект не найден.
 #Contacts
 message.contacts.heading=Наши контакты
 message.contacts.workingHours=Время работы: 10:00-17:00
@@ -147,6 +150,7 @@ message.enum.productType.apron=Кухонные скинали
 message.enum.orderStatus.active = Активный
 message.enum.orderStatus.paid = Оплачен
 message.enum.orderStatus.closed = Закрыт
+message.enum.orderStatus.cart = В корзине
 #Component
 message.enum.componentType.glassType.plural = Типы сктекла
 message.enum.componentType.glassType = Тип стекла
