CatalogController (except save), CatalogService, catalogDao

--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -111,6 +111,8 @@ message.notConfirm.user.password=Пароли не совпадают!
 message.notMatches.user.password=Пароль должен содержать не менее 8 символов, как мимум одн латинскую букву и одно число!
 message.notMatches.user.email=Неверный email!
 message.alreadyExists.user.email=Аккаунт с таким email фдрусом уже существует!
+message.badData.catalog.glass = Каталог для стекла не предусмотрен!
+
 message.order.successCreation=Заказ успешно сформирован!
 #Access denied
 message.accessDenied.code.label=КОД ОШИБКИ
