--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -112,6 +112,7 @@ message.notConfirm.user.password=Password confirm does not matches!
 message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
 message.notMatches.user.email=Email is not valid!
 message.alreadyExists.user.email=There is an account with that email address!
+message.badData.catalog.glass = Catalog for glass is not provided!
 message.order.successCreation=Order is created successfully!
 #Access denied
 message.accessDenied.code.label = ERROR CODE
