--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -97,7 +97,11 @@ message.form.increasePercent.label = Increase per cent
 message.form.increasePercent.placeholder = Enter increase per cent
 message.form.currency.placeholder = Enter currency
 message.form.button.updatePrices = Update prices
-
+message.form.width.placeholder = Width
+message.form.height.placeholder = Height
+message.form.amount.placeholder = Amount
+message.form.button.calculate = Calculate
+message.form.button.addToCart = Add to cart
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
 #Validation
@@ -218,3 +222,6 @@ message.component.column.name = Name
 message.component.column.thickness = Thickness
 message.component.column.symbol = Symbol
 message.component.column.price = Price
+#Calculator
+message.calculator.template = Template
+message.calculator.customer = Customer
