--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -97,6 +97,11 @@ message.form.increasePercent.label = Процент надбавки
 message.form.increasePercent.placeholder = Введите процент надбавки
 message.form.currency.placeholder = Введите курс валюты
 message.form.button.updatePrices = Обновить цены
+message.form.width.placeholder = Ширина
+message.form.height.placeholder = Высота
+message.form.amount.placeholder = Количество
+message.form.button.calculate = Рассчитать
+message.form.button.addToCart = Добавить в корзину
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
 #Validation
@@ -216,3 +221,6 @@ message.component.column.name = Наименование
 message.component.column.thickness = Толщина
 message.component.column.symbol = Краткое обозначение
 message.component.column.price = Цена
+#Calculator
+message.calculator.template = Шаблон
+message.calculator.customer = Заказчик
