--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -169,8 +169,7 @@ message.enum.componentType.accessory.plural = Фурнитура
 message.enum.componentType.accessory = Фурнитура
 message.enum.componentType.accessory.info = Информация по фурнитуре
 #ProcessingType
-message.enum.processingType.processing = Полировка
-message.enum.processingType.grinding = Шлифовка
+message.enum.processingType.processing = Обработка
 message.enum.processingType.facet = Фацет
 message.enum.processingType.hole = Отверстие
 #Orders
