get component list, notifications i18n

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -77,33 +77,35 @@ message.form.button.submitSignUp=Submit
 message.form.text.signUp=Don’t have an account?
 message.form.signUpTextEmail=We'll never share your data with anyone else.
 message.form.button.selectAll=Select all
-message.form.address.label = Address
-message.form.address.placeholder = Enter delivery address
-message.form.button.save = Save
-message.form.button.add = Add
-message.form.button.update = Update
-message.form.button.close = Mark as closed
-message.form.button.open = Open
-message.form.nameComponent.label = Name
-message.form.nameComponent.placeholder = Enter name
-message.form.thickness.label = Thickness
-message.form.thickness.placeholder = Enter thickness
-message.form.symbol.label = Symbol
-message.form.symbol.placeholder = Enter symbol
-message.form.productType.label = Product type
-message.form.button.addFile = Add file
-message.form.button.edit = Edit
-message.form.increasePercent.label = Increase per cent
-message.form.increasePercent.placeholder = Enter increase per cent
-message.form.currency.placeholder = Enter currency
-message.form.button.updatePrices = Update prices
-message.form.width.placeholder = Width
-message.form.height.placeholder = Height
-message.form.amount.placeholder = Amount
-message.form.button.calculate = Calculate
-message.form.button.addToCart = Add to cart
+message.form.address.label=Address
+message.form.address.placeholder=Enter delivery address
+message.form.button.save=Save
+message.form.button.add=Add
+message.form.button.update=Update
+message.form.button.close=Mark as closed
+message.form.button.open=Open
+message.form.nameComponent.label=Name
+message.form.nameComponent.placeholder=Enter name
+message.form.thickness.label=Thickness
+message.form.thickness.placeholder=Enter thickness
+message.form.symbol.label=Symbol
+message.form.symbol.placeholder=Enter symbol
+message.form.productType.label=Product type
+message.form.button.addFile=Add file
+message.form.button.edit=Edit
+message.form.increasePercent.label=Increase per cent
+message.form.increasePercent.placeholder=Enter increase per cent
+message.form.currency.placeholder=Enter currency
+message.form.button.updatePrices=Update prices
+message.form.width.placeholder=Width
+message.form.height.placeholder=Height
+message.form.amount.placeholder=Amount
+message.form.button.calculate=Calculate
+message.form.button.addToCart=Add to cart
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
+message.notification.loadingData.failure=An error occurred while processing the request 
+message.notification.firstRow=You can't delete first row
 #Validation
 message.badCredentials=Invalid username or password
 message.notEmpty.calculator.productType=Product type is required!
@@ -116,111 +118,110 @@ message.notConfirm.user.password=Password confirm does not matches!
 message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
 message.notMatches.user.email=Email is not valid!
 message.alreadyExists.user.email=There is an account with that email address!
-message.badData.catalog.glass = Catalog for glass is not provided!
+message.badData.catalog.glass=Catalog for glass is not provided!
 message.order.successCreation=Order is created successfully!
 #Access denied
-message.accessDenied.code.label = ERROR CODE
-message.accessDenied.code.text = HTTP 403 Forbidden
-message.accessDenied.description.label = ERROR DESCRIPTION
-message.accessDenied.description.text = Access Denied. You Do Not Have The Permission To Access This Page On This Server
-message.accessDenied.footer = HAVE A NICE DAY
+message.accessDenied.code.label=ERROR CODE
+message.accessDenied.code.text=HTTP 403 Forbidden
+message.accessDenied.description.label=ERROR DESCRIPTION
+message.accessDenied.description.text=Access Denied. You Do Not Have The Permission To Access This Page On This Server
+message.accessDenied.footer=HAVE A NICE DAY
 #Not found
-message.notFound.code.text = HTTP 404 NotFound
-message.notFound.description.text = Object is not found.
+message.notFound.code.text=HTTP 404 NotFound
+message.notFound.description.text=Object is not found.
 #Contacts
-message.contacts.heading = Our contacts
-message.contacts.workingHours = Working hours: 10:00-17:00
-message.contacts.weekends = Weekends: Monday
-message.contacts.address = Address: Minsk, Uruchskaya street, Construction market "Uruchye", pavilion 27A
-message.contacts.phone.heading = Phones:
-message.contacts.phone1 = A1 +375 (44) 782-50-19</p>
-message.contacts.phone2 = MTC +375 (29) 708-76-93</p>
+message.contacts.heading=Our contacts
+message.contacts.workingHours=Working hours: 10:00-17:00
+message.contacts.weekends=Weekends: Monday
+message.contacts.address=Address: Minsk, Uruchskaya street, Construction market "Uruchye", pavilion 27A
+message.contacts.phone.heading=Phones:
+message.contacts.phone1=A1 +375 (44) 782-50-19</p>
+message.contacts.phone2=MTC +375 (29) 708-76-93</p>
 #Catalog
-message.catalog.mirror.description = Mirrors are multifunctional interior elements. They combine two main functions: practical and decorative. With their help, you can transform a room, achieve interesting optical effects. You can place an order by phone or via the online form.
-message.catalog.partition.description = Glass partitions are not only a way of zoning a space, but also a decorative element. They can visually expand the room and increase the luminous flux. You can place an order by phone or via an online form. 
-message.catalog.shower.description = Glass shower enclosures perfectly solve issues related to the quality, convenience, functionality of the bathroom. They allow you to eliminate crowding, monotony, and implement the most interesting design ideas in the interior of the room. You can place an order by phone or via the online form.
-message.catalog.apron.description = The appearance of skinale allowed us to reconsider approaches to the design of the kitchen interior. A glass apron for the kitchen has not just become a popular interior solution. You can place an order by phone or via the online form.
-message.catalog.settings.heading = Template
+message.catalog.mirror.description=Mirrors are multifunctional interior elements. They combine two main functions: practical and decorative. With their help, you can transform a room, achieve interesting optical effects. You can place an order by phone or via the online form.
+message.catalog.partition.description=Glass partitions are not only a way of zoning a space, but also a decorative element. They can visually expand the room and increase the luminous flux. You can place an order by phone or via an online form. 
+message.catalog.shower.description=Glass shower enclosures perfectly solve issues related to the quality, convenience, functionality of the bathroom. They allow you to eliminate crowding, monotony, and implement the most interesting design ideas in the interior of the room. You can place an order by phone or via the online form.
+message.catalog.apron.description=The appearance of skinale allowed us to reconsider approaches to the design of the kitchen interior. A glass apron for the kitchen has not just become a popular interior solution. You can place an order by phone or via the online form.
+message.catalog.settings.heading=Template
 #Enums
 #ProdctType
-message.enum.productType.glass.plural = Glass
-message.enum.productType.glass = Glass
-message.enum.productType.mirror.plural = Mirrors
-message.enum.productType.mirror = Mirror
-message.enum.productType.partition.plural = Partitions
-message.enum.productType.partition = Partition
-message.enum.productType.shower.plural = Showers
-message.enum.productType.shower = Shower
-message.enum.productType.apron.plural = Kitchen aprons
-message.enum.productType.apron = Kitchen apron
+message.enum.productType.glass.plural=Glass
+message.enum.productType.glass=Glass
+message.enum.productType.mirror.plural=Mirrors
+message.enum.productType.mirror=Mirror
+message.enum.productType.partition.plural=Partitions
+message.enum.productType.partition=Partition
+message.enum.productType.shower.plural=Showers
+message.enum.productType.shower=Shower
+message.enum.productType.apron.plural=Kitchen aprons
+message.enum.productType.apron=Kitchen apron
 #OrderStatus
-message.enum.orderStatus.active = Active
-message.enum.orderStatus.paid = Paid
-message.enum.orderStatus.closed = Closed
-message.enum.orderStatus.cart = Cart
+message.enum.orderStatus.active=Active
+message.enum.orderStatus.paid=Paid
+message.enum.orderStatus.closed=Closed
+message.enum.orderStatus.cart=Cart
 #Component
-message.enum.componentType.glassType.plural = Glass types
-message.enum.componentType.glassType = Glass type
-message.enum.componentType.glassType.info = Glass type information
-message.enum.componentType.processing.plural = Processing
-message.enum.componentType.processing = Processing
-message.enum.componentType.processing.info = Processing information
-message.enum.componentType.accessory.plural = Accessories
-message.enum.componentType.accessory = Accessory
-message.enum.componentType.accessory.info = Accessory information
+message.enum.componentType.glassType.plural=Glass types
+message.enum.componentType.glassType=Glass type
+message.enum.componentType.glassType.info=Glass type information
+message.enum.componentType.processing.plural=Processing
+message.enum.componentType.processing=Processing
+message.enum.componentType.processing.info=Processing information
+message.enum.componentType.accessory.plural=Accessories
+message.enum.componentType.accessory=Accessory
+message.enum.componentType.accessory.info=Accessory information
 #ProcessingType
-message.enum.processingType.processing = Processing
-message.enum.processingType.facet = Facet
-message.enum.processingType.hole = Hole
-
+message.enum.processingType.processing=Processing
+message.enum.processingType.facet=Facet
+message.enum.processingType.hole=Hole
 #Orders
-message.orders.heading = Orders
-message.orders.heading.single = Order
-message.orders.glass.heading = Glass
-message.orders.column.orderList = Order list
-message.orders.column.cost = Cost
-message.orders.button.formOrder = Form order
-message.orders.button.formAndPayOrder = Form and pay for order
-message.orders.total = Total
-message.orders.deliveryMethod = Delivery methods
-message.orders.deliveryMethod.delivery = Delivery
-message.orders.deliveryMethod.pickUp = Pick up
-message.orders.paymentMethod = Payment methods
-message.orders.paymentMethod.cash = Cash
-message.orders.paymentMethod.card = Card
+message.orders.heading=Orders
+message.orders.heading.single=Order
+message.orders.glass.heading=Glass
+message.orders.column.orderList=Order list
+message.orders.column.cost=Cost
+message.orders.button.formOrder=Form order
+message.orders.button.formAndPayOrder=Form and pay for order
+message.orders.total=Total
+message.orders.deliveryMethod=Delivery methods
+message.orders.deliveryMethod.delivery=Delivery
+message.orders.deliveryMethod.pickUp=Pick up
+message.orders.paymentMethod=Payment methods
+message.orders.paymentMethod.cash=Cash
+message.orders.paymentMethod.card=Card
 message.orders.address.text=* Specify the delivery cost by phone
 message.orders.total.text=* Total cost excluding delivery
-message.orders.filter.label = Filter:
-message.orders.filter.active = Active
-message.orders.filter.all = All
-message.orders.filter.paid = Paid
-message.orders.filter.expired = Expired
-message.orders.filter.closed = Closed
-message.orders.column.name = Name
-message.orders.column.product = Product
-message.orders.column.status = Status
-message.orders.column.date = Date
-message.orders.column.deadline = Deadline
+message.orders.filter.label=Filter:
+message.orders.filter.active=Active
+message.orders.filter.all=All
+message.orders.filter.paid=Paid
+message.orders.filter.expired=Expired
+message.orders.filter.closed=Closed
+message.orders.column.name=Name
+message.orders.column.product=Product
+message.orders.column.status=Status
+message.orders.column.date=Date
+message.orders.column.deadline=Deadline
 #Glass
-message.glass.column.type = Type
-message.glass.column.size = Size
-message.glass.column.amount = Amount
-message.glass.column.processing = Processing
+message.glass.column.type=Type
+message.glass.column.size=Size
+message.glass.column.amount=Amount
+message.glass.column.processing=Processing
 #Customer
-message.customer.heading = Customer information
-message.customer.contacts = Customer contacts
+message.customer.heading=Customer information
+message.customer.contacts=Customer contacts
 #Profile
-message.profile.heading = Edit profile
-message.profile.button.ordersHistory = Orders history
+message.profile.heading=Edit profile
+message.profile.button.ordersHistory=Orders history
 #Component
-message.component.section.glassType.text = Working on glass types adding, updating and deleting
-message.component.section.processing.text = Working on processing adding, updating and deleting
-message.component.section.accessory.text = Working on accessory adding, updating and deleting
-message.component.column.type = Type
-message.component.column.name = Name
-message.component.column.thickness = Thickness
-message.component.column.symbol = Symbol
-message.component.column.price = Price
+message.component.section.glassType.text=Working on glass types adding, updating and deleting
+message.component.section.processing.text=Working on processing adding, updating and deleting
+message.component.section.accessory.text=Working on accessory adding, updating and deleting
+message.component.column.type=Type
+message.component.column.name=Name
+message.component.column.thickness=Thickness
+message.component.column.symbol=Symbol
+message.component.column.price=Price
 #Calculator
-message.calculator.template = Template
-message.calculator.customer = Customer
+message.calculator.template=Template
+message.calculator.customer=Customer
