--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -104,6 +104,8 @@ message.form.button.calculate = Рассчитать
 message.form.button.addToCart = Добавить в корзину
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
+message.notification.loadingData.failure = Во время выполнения запроса произошла ошибка!
+message.notification.firstRow =  Формирование заказа без стекла не допускается!
 #Validation
 message.badCredentials=Неверное имя пользователя или пароль!
 message.notEmpty.calculator.productType=Требуется тип изделия!
