Cart, order, catalog save ajax, Json response status

--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -109,7 +109,7 @@ message.notification.firstRow =  Формирование заказа без с
 #Validation
 message.badCredentials=Неверное имя пользователя или пароль!
 message.notEmpty.calculator.productType=Требуется тип изделия!
-message.notEmpty.calculator.cost=Требуется стоиоть!
+message.notEmpty.calculator.cost=Требуется стоимость!
 message.notEmpty.user.login=Требуется логин!
 message.notEmpty.user.password=Требуется пароль!
 message.notEmpty.user.confirmPassword=Требуется подтверждение пароля!
