Telegram, modal form validation

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -104,6 +104,7 @@ message.form.button.calculate=Calculate
 message.form.button.addToCart=Add to cart
 #Notification
 message.notification.modalSend.success=Your request is sent successfully
+message.notification.modalSend.failure=An error occurred while sending the request
 message.notification.loadingData.failure=An error occurred while processing the request 
 message.notification.firstRow=You can't delete first row
 #Validation
@@ -118,8 +119,15 @@ message.notConfirm.user.password=Password confirm does not matches!
 message.notMatches.user.password=Password must consist of minimum eight characters, at least one letter and one number!
 message.notMatches.user.email=Email is not valid!
 message.alreadyExists.user.email=There is an account with that email address!
+message.notEmpty.customer.name=Name is required!
+message.notEmpty.customer.phone=Phone is required!
+message.notEmpty.modal.message=Message is required!
+message.notMatches.customer.phone=Phone is not valid! Required format +375(99) 999-99-99 
 message.badData.catalog.glass=Catalog for glass is not provided!
 message.order.successCreation=Order is created successfully!
+message.notEmpty.calculator.glass.width=Width is required!
+message.notEmpty.calculator.glass.height=Height is required!
+message.notEmpty.calculator.glass.amount=Amount is required!
 #Access denied
 message.accessDenied.code.label=ERROR CODE
 message.accessDenied.code.text=HTTP 403 Forbidden
@@ -225,3 +233,8 @@ message.component.column.price=Price
 #Calculator
 message.calculator.template=Template
 message.calculator.customer=Customer
+#CallRequest
+message.callRequest.text=Customer %s request for call %s
+message.callRequest.email=Email: %s
+message.callRequest.topic=Topic: %s
+message.callRequest.message=Message text: %s
