--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -104,6 +104,7 @@ message.form.button.calculate = Рассчитать
 message.form.button.addToCart = Добавить в корзину
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
+message.notification.modalSend.failure=Во время отправи запроса произошла ошибка!
 message.notification.loadingData.failure = Во время выполнения запроса произошла ошибка!
 message.notification.firstRow =  Формирование заказа без стекла не допускается!
 #Validation
@@ -119,8 +120,15 @@ message.notMatches.user.password=Пароль должен содержать н
 message.notMatches.user.email=Неверный email!
 message.alreadyExists.user.email=Аккаунт с таким email фдрусом уже существует!
 message.badData.catalog.glass = Каталог для стекла не предусмотрен!
-
+message.notEmpty.calculator.glass.width=Требуется ширина!
+message.notEmpty.calculator.glass.height=Требуется высота!
+message.notEmpty.calculator.glass.amount=Требуется количество!
 message.order.successCreation=Заказ успешно сформирован!
+message.notEmpty.customer.name=Требуется ФИО!
+message.notEmpty.customer.phone=Требуется номер телефона!
+message.notEmpty.modal.message=Требуется сообщение!
+message.notMatches.customer.phone=Неаерный номер телефона! Требуемый формат +375(99) 999-99-99
+
 #Access denied
 message.accessDenied.code.label=КОД ОШИБКИ
 message.accessDenied.code.text=HTTP 403 Доступ запрещен
@@ -225,3 +233,8 @@ message.component.column.price = Цена
 #Calculator
 message.calculator.template = Шаблон
 message.calculator.customer = Заказчик
+#CallRequest
+message.callRequest.text=Клиент %s запрашивает звонок обратной связи %s
+message.callRequest.email=Email: %s
+message.callRequest.topic=Тема: %s
+message.callRequest.message=Текст сообщения: %s
