order controller (status change, delete)

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -82,7 +82,8 @@ message.form.address.placeholder=Enter delivery address
 message.form.button.save=Save
 message.form.button.add=Add
 message.form.button.update=Update
-message.form.button.close=Mark as closed
+message.form.button.close=Close
+message.form.button.pay=Pay for
 message.form.button.open=Open
 message.form.nameComponent.label=Name
 message.form.nameComponent.placeholder=Enter name
@@ -107,6 +108,10 @@ message.notification.modalSend.success=Your request is sent successfully
 message.notification.modalSend.failure=An error occurred while sending the request
 message.notification.loadingData.failure=An error occurred while processing the request 
 message.notification.firstRow=You can't delete first row
+message.notification.order.status.failure = You can't change order status!
+message.notification.order.status.success = Order status is set successfully!
+message.notification.order.update.failure = You can't update order!
+message.notification.order.delete.success = Order is deleted successfully!
 #Validation
 message.badCredentials=Invalid username or password
 message.notEmpty.calculator.productType=Product type is required!
