--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -82,7 +82,8 @@ message.form.address.placeholder=Введите адрес доставки
 message.form.button.save = Сохранить
 message.form.button.add = Добавить
 message.form.button.update = Обновить
-message.form.button.close = Отметить закрытым
+message.form.button.close = Закрыть
+message.form.button.pay = Оплатить
 message.form.button.open = Открыть
 message.form.nameComponent.label = Наименование
 message.form.nameComponent.placeholder = Введите наименование
@@ -104,9 +105,13 @@ message.form.button.calculate = Рассчитать
 message.form.button.addToCart = Добавить в корзину
 #Notification
 message.notification.modalSend.success=Запрос успешно отправлен!
-message.notification.modalSend.failure=Во время отправи запроса произошла ошибка!
+message.notification.modalSend.failure=Во время отправки запроса произошла ошибка!
 message.notification.loadingData.failure = Во время выполнения запроса произошла ошибка!
 message.notification.firstRow =  Формирование заказа без стекла не допускается!
+message.notification.order.status.failure = Измнение статуса заказа не допускается!
+message.notification.order.status.success = Статус заказа успешно изменен!
+message.notification.order.update.failure = Измнение заказа не допускается!
+message.notification.order.delete.success = Заказ успешно удален!
 #Validation
 message.badCredentials=Неверное имя пользователя или пароль!
 message.notEmpty.calculator.productType=Требуется тип изделия!
