--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -112,6 +112,9 @@ message.notification.order.status.failure = Измнение статуса за
 message.notification.order.status.success = Статус заказа успешно изменен!
 message.notification.order.update.failure = Измнение заказа не допускается!
 message.notification.order.delete.success = Заказ успешно удален!
+message.notification.catalog.upload.validate = Сохранение шаблона католога без фотографии не допускается!
+message.notification.catalog.upload.failure = Ошибка при загрузке фотографии!
+message.notification.catalog.delete.success = Шаблон каталога успешно удален!
 #Validation
 message.badCredentials=Неверное имя пользователя или пароль!
 message.notEmpty.calculator.productType=Требуется тип изделия!
