--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -112,6 +112,9 @@ message.notification.order.status.failure = You can't change order status!
 message.notification.order.status.success = Order status is set successfully!
 message.notification.order.update.failure = You can't update order!
 message.notification.order.delete.success = Order is deleted successfully!
+message.notification.catalog.upload.validate = You can't save catalog item with empty image
+message.notification.catalog.upload.failure = Cannot upload image!
+message.notification.catalog.delete.success = Catalog item is deleted successfully!
 #Validation
 message.badCredentials=Invalid username or password
 message.notEmpty.calculator.productType=Product type is required!
