--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -115,6 +115,8 @@ message.notification.order.delete.success = Order is deleted successfully!
 message.notification.catalog.upload.validate = You can't save catalog item with empty image
 message.notification.catalog.upload.failure = Cannot upload image!
 message.notification.catalog.delete.success = Catalog item is deleted successfully!
+message.notification.priceList.save.success = Prices are set successfully!
+message.notification.priceList.update.success = Prices are updated successfully!
 #Validation
 message.badCredentials=Invalid username or password
 message.notEmpty.calculator.productType=Product type is required!
