--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -115,6 +115,8 @@ message.notification.order.delete.success = Заказ успешно удале
 message.notification.catalog.upload.validate = Сохранение шаблона католога без фотографии не допускается!
 message.notification.catalog.upload.failure = Ошибка при загрузке фотографии!
 message.notification.catalog.delete.success = Шаблон каталога успешно удален!
+message.notification.priceList.save.success = Цены успешно установлены!
+message.notification.priceList.update.success = Цены успешно пересчитаны!
 #Validation
 message.badCredentials=Неверное имя пользователя или пароль!
 message.notEmpty.calculator.productType=Требуется тип изделия!
