--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -117,6 +117,7 @@ message.notification.catalog.upload.failure = Cannot upload image!
 message.notification.catalog.delete.success = Catalog item is deleted successfully!
 message.notification.priceList.save.success = Prices are set successfully!
 message.notification.priceList.update.success = Prices are updated successfully!
+message.notification.profile.save.success = Personal information is saved successfully!
 #Validation
 message.badCredentials=Invalid username or password
 message.notEmpty.calculator.productType=Product type is required!
