--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -117,6 +117,7 @@ message.notification.catalog.upload.failure = Ошибка при загрузк
 message.notification.catalog.delete.success = Шаблон каталога успешно удален!
 message.notification.priceList.save.success = Цены успешно установлены!
 message.notification.priceList.update.success = Цены успешно пересчитаны!
+message.notification.profile.save.success = Личная информация сохранена успешно!
 #Validation
 message.badCredentials=Неверное имя пользователя или пароль!
 message.notEmpty.calculator.productType=Требуется тип изделия!
