--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -118,6 +118,10 @@ message.notification.catalog.delete.success = Catalog item is deleted successful
 message.notification.priceList.save.success = Prices are set successfully!
 message.notification.priceList.update.success = Prices are updated successfully!
 message.notification.profile.save.success = Personal information is saved successfully!
+message.notification.order.submit.success = Order is submitted successfully
+message.notification.order.pay.success = Order is paid successfully
+message.notification.order.addCart.success = Order is added to cart!
+message.notification.cart.orderSelect=No orders are selected!
 #Validation
 message.badCredentials=Invalid username or password
 message.notEmpty.calculator.productType=Product type is required!
@@ -249,3 +253,8 @@ message.callRequest.text=Customer %s request for call %s
 message.callRequest.email=Email: %s
 message.callRequest.topic=Topic: %s
 message.callRequest.message=Message text: %s
+#Card
+message.cart.paymentInfo.header=Payment information
+message.cart.paymentInfo.cardNumber=Card number
+message.cart.paymentInfo.YourName=Card holder name
+message.cart.paymentInfo.Expired=Expired
