order history, order show

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -77,7 +77,7 @@ message.form.button.submitSignUp=Submit
 message.form.text.signUp=Don’t have an account?
 message.form.signUpTextEmail=We'll never share your data with anyone else.
 message.form.button.selectAll=Select all
-message.form.address.label=Address
+message.form.address.label=Delivery address
 message.form.address.placeholder=Enter delivery address
 message.form.button.save=Save
 message.form.button.add=Add
@@ -197,8 +197,12 @@ message.enum.componentType.accessory.info=Accessory information
 message.enum.processingType.processing=Processing
 message.enum.processingType.facet=Facet
 message.enum.processingType.hole=Hole
+#Payment
+message.enum.payment.cash=Cash
+message.enum.payment.card=Card
 #Orders
 message.orders.heading=Orders
+message.orders.history.heading=Orders history
 message.orders.heading.single=Order
 message.orders.glass.heading=Glass
 message.orders.column.orderList=Order list
@@ -225,6 +229,11 @@ message.orders.column.product=Product
 message.orders.column.status=Status
 message.orders.column.date=Date
 message.orders.column.deadline=Deadline
+message.orders.column.installation = Installation
+message.orders.column.delivery = Delivery
+message.orders.column.address = Address
+message.orders.column.payment = Payment method
+message.orders.column.service = Extra service
 #Glass
 message.glass.column.type=Type
 message.glass.column.size=Size
