--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -77,7 +77,7 @@ message.form.button.submitSignUp=Зарегистрироваться
 message.form.text.signUp=Еще не зарегистрировались?
 message.form.signUpTextEmail=Мы не распространяем ваши персональные данные
 message.form.button.selectAll=Выбрать все
-message.form.address.label=Адрес
+message.form.address.label=Адрес доставки
 message.form.address.placeholder=Введите адрес доставки
 message.form.button.save = Сохранить
 message.form.button.add = Добавить
@@ -197,8 +197,12 @@ message.enum.componentType.accessory.info = Информация по фурни
 message.enum.processingType.processing = Обработка
 message.enum.processingType.facet = Фацет
 message.enum.processingType.hole = Отверстие
+#Payment
+message.enum.payment.cash=Наличные
+message.enum.payment.card=Карта
 #Orders
 message.orders.heading=Заказы
+message.orders.history.heading=История заказов
 message.orders.heading.single=Заказ
 message.orders.glass.heading = Стекло
 message.orders.column.orderList=Состав заказа
@@ -225,6 +229,11 @@ message.orders.column.product = Изделие
 message.orders.column.status = Статус
 message.orders.column.date = Дата создания
 message.orders.column.deadline = Срок сдачи
+message.orders.column.installation = Установка
+message.orders.column.delivery = Доставка
+message.orders.column.address = Адрес доставки
+message.orders.column.payment = Способ оплаты
+message.orders.column.service = Дополнительные услуги
 #Glass
 message.glass.column.type = Тип
 message.glass.column.size = Размер
