calculator calculate price with glass shapes, installation and accessorise

--- a/src/main/resources/messages/messages_en.properties
+++ b/src/main/resources/messages/messages_en.properties
@@ -200,6 +200,11 @@ message.enum.processingType.hole=Hole
 #Payment
 message.enum.payment.cash=Cash
 message.enum.payment.card=Card
+#Shape
+message.enum.shape.arbitrary = Arbitrary
+message.enum.shape.rectangle = Rectangle
+message.enum.shape.rightTriangle = Right triangle
+message.enum.shape.circle = Circle
 #Orders
 message.orders.heading=Orders
 message.orders.history.heading=Orders history
@@ -257,6 +262,7 @@ message.component.column.price=Price
 #Calculator
 message.calculator.template=Template
 message.calculator.customer=Customer
+message.calculator.shape.label=Shape
 #CallRequest
 message.callRequest.text=Customer %s request for call %s
 message.callRequest.email=Email: %s
