--- a/src/main/resources/messages/messages_ru.properties
+++ b/src/main/resources/messages/messages_ru.properties
@@ -200,6 +200,11 @@ message.enum.processingType.hole = Отверстие
 #Payment
 message.enum.payment.cash=Наличные
 message.enum.payment.card=Карта
+#Shape
+message.enum.shape.arbitrary = Произвольная
+message.enum.shape.rectangle = Прямоугольник
+message.enum.shape.rightTriangle = Правильный треугольник
+message.enum.shape.circle = Круг
 #Orders
 message.orders.heading=Заказы
 message.orders.history.heading=История заказов
@@ -257,6 +262,7 @@ message.component.column.price = Цена
 #Calculator
 message.calculator.template = Шаблон
 message.calculator.customer = Заказчик
+message.calculator.shape.label=Форма
 #CallRequest
 message.callRequest.text=Клиент %s запрашивает звонок обратной связи %s
 message.callRequest.email=Email: %s
